namespace Modeler.Relationships;

public abstract class Relationship
{
    
}